foi adicionado algumas funções de gerenciamento